<?xml version="1.0" encoding="utf-8"?>

<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/home_header"
            android:layout_width="match_parent"
            android:layout_height="175dp"
            android:background="@drawable/home_background"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:paddingHorizontal="20dp"
            android:paddingTop="46dp"
            android:paddingBottom="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_regular"
                android:lineHeight="18.75sp"
                android:text="@string/hi_plant_lover"
                android:textColor="@color/black_1"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/robot_medium"
                android:lineHeight="28sp"
                android:text="@string/good_afternoon"
                android:textColor="@color/black_1"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/searchEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/edit_text_background"
                android:drawableStart="@drawable/search_img"
                android:drawablePadding="12dp"
                android:hint="@string/search_for_plants"
                android:letterSpacing="0.045"
                android:lineHeight="18.37sp"
                android:minWidth="320dp"
                android:minHeight="48dp"
                android:paddingHorizontal="12dp"
                android:paddingVertical="12dp"
                android:textColor="@android:color/black"
                android:textColorHint="#888888"
                android:textSize="15.5sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </LinearLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/premiumLayout"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="24dp"
            android:layout_marginRight="8dp"
            android:background="@drawable/premium_background_shape"
            android:gravity="start"
            android:minWidth="327dp"
            android:minHeight="63dp"
            android:paddingVertical="12dp"
            android:paddingLeft="16dp"
            android:paddingRight="10dp"
            app:layout_constraintTop_toBottomOf="@+id/home_header">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center_vertical"
                android:scaleType="fitCenter"
                android:src="@drawable/msg_icon"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:gravity="center_vertical"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageView"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_semi_bold"
                    android:lineHeight="21sp"
                    android:text="@string/free_premium_available"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/one_month_desc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_regular"
                    android:lineHeight="16sp"
                    android:text="Tap to upgrade your account!"
                    android:textColor="@color/white_transparent_70"
                    android:textSize="13sp" />
            </LinearLayout>

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center_vertical"
                android:scaleType="centerCrop"
                android:src="@drawable/icon_right_arrow"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewQuestins"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="24dp"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/premiumLayout"
            tools:listitem="@layout/question_item" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewCategories"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="24dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recyclerViewQuestins"
            tools:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            tools:listitem="@layout/category_item"
            tools:spanCount="2" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>